LAB5_update_make

--- a/Lab2_C/LAB5/dinamic_1/Makefile
+++ b/Lab2_C/LAB5/dinamic_1/Makefile
@@ -1,6 +1,16 @@
-main : main.o
-	gcc main.o -L. -lcalcdyn -o main
-main.o : main.c
-	gcc -c -Wall -std=c99 main.c
+MAIN = main
+LIBS = ../libs
+CF = -c -Wall -std=c99
+DCALC = libcalcdyn
+all : $(DCALC) $(MAIN)
+$(DCALC) : $(LIBS)/lib_four.c $(LIBS)/lib_three.c $(LIBS)/lib_four.h $(LIBS)/lib_three.h
+	gcc -fPIC $(CF) $(LIBS)/lib_three.c
+	gcc -fPIC $(CF) $(LIBS)/lib_four.c
+	gcc -shared -o $(DCALC).so lib_three.o lib_four.o
+$(MAIN) : $(MAIN).c
+	gcc $(CF) -Wall -std=c99 main.c
+	gcc $(MAIN).o -L. -lcalcdyn -o $(MAIN)
+	rm *.o
+
 clean :
-	rm main.o main
+	rm main libcalcdyn.so
